# JobForge-2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
.claude/: settings.local.json
.claude/commands/: stage-gold.md
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/bronze/: .gitkeep
data/caf/: careers_en.json  careers_fr.json  job_families.json  occupations.json
data/crosswalk/: noc2021_onet26.csv
data/gold/: .gitkeep  fact_og_pay_rates.parquet
data/quarantine/: .gitkeep
data/silver/: .gitkeep
data/source/: abilities_oasis_2023_v1.0.csv  additional-information_oasis_2023_v1.0.csv  employment-requirements_oasis_2023_v1.0.csv  employment_cops_sample.csv  employment_emploi_2024_2033_noc2021.csv  (+30 more)
docs/: architecture.md  extending-intents.md  integration-guide.md
tests/: __init__.py  test_caf_integration.py  test_catalog_enrich.py  test_catalogue.py  test_cops_ingestion.py  test_description_models.py  test_description_service.py  test_dim_noc_ingestion.py  test_inheritance.py  test_job_architecture_ingestion.py  test_lineage_graph.py  test_lineage_query.py  test_llm_imputation.py  test_noc_attributes_ingestion.py  test_noc_resolution.py  test_og_ingestion.py  test_og_qualifications_ingestion.py  test_onet.py  test_pipeline_e2e.py  test_schema_ddl.py  test_tbs_scraper.py
(+468 files in other folders)
