[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobforge"
version = "2.0.0"
description = "Workforce intelligence platform with auditable data provenance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JobForge Team"}
]
keywords = ["data-pipeline", "medallion-architecture", "data-governance", "workforce-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "polars>=1.37.0",
    "duckdb>=1.4.0",
    "pydantic>=2.12.0",
    "structlog>=24.0.0",
    "pyarrow>=15.0.0",
    "rich>=14.1.0",
    "typer>=0.12.0",
    "networkx>=3.0",
    "rapidfuzz>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "openai>=1.52.0",
    "anthropic>=0.43.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "sse-starlette>=2.0.0",
    "fastapi>=0.115.0",
    "pdfplumber>=0.11.0,<0.12.0",
]

[project.scripts]
jobforge = "jobforge.cli.commands:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
